# Catalyst-Project

./: .gitignore  README.md  compose.exmple.yaml  start-docker.bat  start-docker.sh
Catalyst-Auth/: .gitignore  go.sum
Catalyst-DiscordAuth/: .gitignore  go.mod  main.go
Catalyst-Mono/: .gitignore  build.gradle  settings.gradle
Catalyst-Mono/Catalyst-Api/: build.gradle
Catalyst-Mono/Catalyst-Core/: build.gradle
Catalyst-Mono/Catalyst-DiscordCore/: build.gradle
Catalyst-Mono/Catalyst-Modules/: build.gradle
Catalyst-Mono/Catalyst-Worker/: build.gradle
Catalyst-Reactor/: .gitignore  pyproject.toml
Catalyst-Reactor/reactor/: __main__.py
Catalyst-Reactor/reactor/model/: factory.py  rabbit_queues.py
Catalyst-Reactor/reactor/rabbitmq/: connection_factory.py  consumer.py  manager.py  publisher.py
Catalyst-Reactor/reactor/rabbitmq/factory/: connection_factory.py
Catalyst-Web/auth-backend/: index.js  package-lock.json  package.json
Catalyst-Web/website/: .eslintrc.cjs  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml
Catalyst-Web/website/V2Example/: package.json
Catalyst-Web/website/V3Vuetify/: exports.js  package.json
Catalyst-Web/website/components/: CookieBanner.vue  ForumView.vue  Navbar.vue  PluginRow.vue  Table.vue  forum_view_controller.vue
Catalyst-Web/website/journals/: 2024_02_13.md  2024_02_14.md  2024_02_15.md
Catalyst-Web/website/logseq/: config.edn
Catalyst-Web/website/middleware/: sessions.js
Catalyst-Web/website/nuxt/: app.config.mjs  components.d.ts  components.ts  imports.ts  nitro.json  (+5 more)
env/: compose.exmple.yaml
(+198 files in other folders)
